# val-cat-conjugation

./: .gitignore  .pdm-python  .prettierrc  docker-compose.yml  middleware.ts  package.json  pnpm-lock.yaml  pyproject.toml  softcatala.html  turbo.json
actions/: get-verb.ts  get-verbs.ts
api/: index.py
api/core/: config.py
api/db/: client.py
api/db/models/: verbs.py
api/schemas/: verbs.py
api/services/: verbs.py
api/tests/: setup.py  test_utils.py  test_verbs.py  test_verbs_service.py
api/tests/fixtures/: anar-se-gemini.json  anar.json  batallar-gemini.json  parlar.json
api/tests/integration/: test_in_verbs_database.py  test_int_verbs.py  test_int_verbs_gemini.py
api/tests/mocks/: ai.py
api/tests/verbs/: test_verbs_service.py  test_verbs_utils.py
api/types/: verbs.py
api/utils/: ai.py  encoders.py  exceptions.py  fetch.py  logger.py  seed.py  verbs.py
api/utils/ai/: clients.py  handlers.py
api/utils/queries/: staff.py  verbs.py
api/v1/: api.py
app/: layout.tsx
app/(main)/: layout.tsx
apps/backend/: docker-compose.yml  package.json  pyproject.toml  requirements.txt  run_migrations.py  run_migrations.sh  vercel.json
apps/frontend/: eslint.config.mjs  next.config.ts  package.json  tsconfig.json  types.d.ts
components/: footer.tsx  header.tsx  modal.tsx
components/providers/: hoc-provider.tsx
components/verbs/: verb-card.tsx  verb-mood.tsx  verb-table.tsx  verbs-list.tsx  verbs-row.tsx
lib/: constants.ts  data.json
lib/hooks/: use-modal.ts
lib/types/: verbs.ts
lib/utils/: api-client.ts  app-error.ts  with-error-handler.ts
(+280 files in other folders)
